Fix absoluate urls, typo, and publish script

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 title = "Git"
 uglyURLs = false
 enableEmoji = true
-relativeURLs = true
+relativeURLs = false
 canonifyURLs = true
 pygmentsStyle = "igor"
 languageCode = "en-us"
